name:                graphql-meta
version:             0.1.0.0
synopsis:            Generic and meta programming facilities for GraphQL
description:         Quasi-quotater for GraphQL Schema and QueryDocuments
homepage:            https://github.com/urbint/graphql-meta
license:             BSD3
license-file:        LICENSE
author:              David Johnson, Ryan Schmukler
maintainer:          david@urbint.com
copyright:           Urbint (c) 2018-2019
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:
    GraphQL.AST
    GraphQL.QQ
    GraphQL.Parser
    GraphQL.Pretty
    GraphQL.Generic
    GraphQL.Lexer
  build-depends:
    array,
    bytestring,
    attoparsec,
    base < 5,
    containers,
    deepseq,
    text,
    prettyprinter,
    template-haskell
  build-tools:
    alex,
    happy
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  ghc-options:
    -Wall

executable example
  main-is:
    Main.hs
  build-depends:
    base < 5,
    graphql-meta,
    text
  hs-source-dirs:
    example
  default-language:
    Haskell2010

test-suite tests
  type:
    exitcode-stdio-1.0
  main-is:
    Main.hs
  hs-source-dirs:
    test
  build-depends:
    base < 5,
    bytestring,
    graphql-meta,
    hspec,
    QuickCheck,
    quickcheck-instances,
    text
  ghc-options:
    -Wall -threaded -rtsopts
  default-language:
    Haskell2010
  other-modules:
    Test.GraphQL.Lexer
    Test.GraphQL.Parser
    Test.GraphQL.Gen

benchmark benchmarks
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    bench
  build-depends:
    base < 5,
    bytestring,
    criterion,
    graphql-meta,
    text
  ghc-options:
    -O2 -Wall
  main-is:
    Main.hs
  default-language:
    Haskell2010

source-repository head
  type: git
  location: https://github.com/urbint/graphql-meta.git